// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render schedule options if checked 1`] = `
<div>
  <Checkbox
    classes={
      Array [
        "soft-bottom",
      ]
    }
    clicked={[Function]}
    defaultValue={true}
    name="schedule"
  >
    <span
      className="soft-half-top"
    >
      Schedule This Contribution
    </span>
  </Checkbox>
  <div>
    <div
      className="display-block soft-half-ends"
    >
      <h7>
        Frequency
      </h7>
      <div
        className="display-block soft-half-top"
      >
        <Component
          items={
            Array [
              Object {
                "value": "foo",
              },
            ]
          }
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="display-block soft-bottom"
    >
      <h7>
        Start Date
      </h7>
      <div
        className="display-block soft-half-top"
      >
        <Component
          items={
            Array [
              Object {
                "value": "bar",
              },
            ]
          }
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the date picker if told to 1`] = `
<div>
  <Checkbox
    classes={
      Array [
        "soft-bottom",
      ]
    }
    clicked={[Function]}
    defaultValue={true}
    name="schedule"
  >
    <span
      className="soft-half-top"
    >
      Schedule This Contribution
    </span>
  </Checkbox>
  <div>
    <div
      className="display-block soft-half-ends"
    >
      <h7>
        Frequency
      </h7>
      <div
        className="display-block soft-half-top"
      >
        <Component
          items={
            Array [
              Object {
                "value": "foo",
              },
            ]
          }
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="display-block soft-bottom"
    >
      <h7>
        Start Date
      </h7>
      <div
        className="display-block soft-half-top"
      >
        <Component
          items={
            Array [
              Object {
                "value": "bar",
              },
            ]
          }
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <Component
    onDayClick={[Function]}
    start="now"
    toggleDatePicker={[Function]}
  />
</div>
`;

exports[`should render with minimal props 1`] = `
<div>
  <Checkbox
    classes={
      Array [
        "soft-bottom",
      ]
    }
    clicked={[Function]}
    defaultValue={false}
    name="schedule"
  >
    <span
      className="soft-half-top"
    >
      Schedule This Contribution
    </span>
  </Checkbox>
</div>
`;

exports[`test should render schedule options if checked 1`] = `
<div>
  <Checkbox
    classes={
      Array [
        "soft-bottom",
      ]
    }
    clicked={[Function]}
    defaultValue={true}
    name="schedule">
    <span
      className="soft-half-top">
      Schedule This Contribution
    </span>
  </Checkbox>
  <div>
    <div
      className="display-block soft-half-ends">
      <h7>
        Frequency
      </h7>
      <div
        className="display-block soft-half-top">
        <Component
          items={
            Array [
              Object {
                "value": "foo",
              },
            ]
          }
          onClick={[Function]} />
      </div>
    </div>
    <div
      className="display-block soft-bottom">
      <h7>
        Start Date
      </h7>
      <div
        className="display-block soft-half-top">
        <Component
          items={
            Array [
              Object {
                "value": "bar",
              },
            ]
          }
          onClick={[Function]} />
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render the date picker if told to 1`] = `
<div>
  <Checkbox
    classes={
      Array [
        "soft-bottom",
      ]
    }
    clicked={[Function]}
    defaultValue={true}
    name="schedule">
    <span
      className="soft-half-top">
      Schedule This Contribution
    </span>
  </Checkbox>
  <div>
    <div
      className="display-block soft-half-ends">
      <h7>
        Frequency
      </h7>
      <div
        className="display-block soft-half-top">
        <Component
          items={
            Array [
              Object {
                "value": "foo",
              },
            ]
          }
          onClick={[Function]} />
      </div>
    </div>
    <div
      className="display-block soft-bottom">
      <h7>
        Start Date
      </h7>
      <div
        className="display-block soft-half-top">
        <Component
          items={
            Array [
              Object {
                "value": "bar",
              },
            ]
          }
          onClick={[Function]} />
      </div>
    </div>
  </div>
  <Component
    onDayClick={[Function]}
    start="now"
    toggleDatePicker={[Function]} />
</div>
`;

exports[`test should render with minimal props 1`] = `
<div>
  <Checkbox
    classes={
      Array [
        "soft-bottom",
      ]
    }
    clicked={[Function]}
    defaultValue={false}
    name="schedule">
    <span
      className="soft-half-top">
      Schedule This Contribution
    </span>
  </Checkbox>
</div>
`;
